--- a/src/components/ImageGallery.css
+++ b/src/components/ImageGallery.css
@@ -8,20 +8,20 @@
 }
 
 .gallery-container h1 {
-  position: absolute;
-  top: 15px;
+    position: absolute;
+      top: 0px;
   left: 50%;
   transform: translateX(-50%);
-  color: rgba(255, 255, 255, 0.8);
-  margin: 0;
-  z-index: 10;
-  font-size: 1.2rem;
-  font-weight: 400;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-  background: rgba(0, 0, 0, 0.15);
-  padding: 6px 12px;
-  border-radius: 4px;
-  backdrop-filter: blur(5px);
+    color: rgba(255, 255, 255, 0.8);
+    margin: 0;
+    z-index: 10;
+    font-size: 1.2rem;
+    font-weight: 400;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    background: rgb(0 0 0 / 78%);
+    padding: 6px 12px;
+    border-radius: 0;
+    backdrop-filter: blur(5px);
 }
 
 .carousel-container {
@@ -77,24 +77,25 @@
 .carousel-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   display: block;
 }
 
 .image-info {
-  position: absolute;
-  bottom: 20px;
+ position: absolute;
+    bottom: 0px;
   left: 50%;
   transform: translateX(-50%);
-  background: rgba(0, 0, 0, 0.2);
-  color: rgba(255, 255, 255, 0.9);
-  padding: 8px 16px;
-  border-radius: 6px;
-  text-align: center;
-  backdrop-filter: blur(5px);
-  z-index: 10;
-  max-width: 400px;
-  width: auto;
+    color: rgba(255, 255, 255, 0.8);
+    margin: 0;
+    z-index: 10;
+    font-size: 1.2rem;
+    font-weight: 400;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    background: rgb(0 0 0 / 78%);
+    padding: 6px 12px;
+    border-radius: 0;
+    backdrop-filter: blur(5px);
 }
 
 .image-info .caption {
